# Hackathon-TAWS-Track5

./: .env.example  .gitattributes  .gitignore  .vercelignore  README.md  render.yaml  skills-lock.json  vercel.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py  market_universe.py  news_clustering.py  news_links.py  news_resolution.py  openai_client.py  supabase_client.py
backend/app/api/: __init__.py  dependencies.py  health.py
backend/app/calculations/: __init__.py  confidence.py  returns.py
backend/app/contracts/: __init__.py  api.py  entities.py  fixtures.py
backend/app/llm/: base.py  fixture_adapter.py  openai_responses.py
backend/app/models/: conversations.py
backend/app/operations/: __init__.py  store.py  worker.py
backend/app/providers/: base.py  fixture_provider.py  live_market.py  provider_cache.py
backend/app/repositories/: base.py  conversation_repository.py  fixture_repository.py  provider_budget_repository.py  provider_cache_repository.py  provider_health_repository.py  supabase_repository.py
backend/app/security/: auth.py  permissions.py
backend/app/services/: analysis_service.py  briefing_service.py  conversation_service.py  (+8 more)
backend/scripts/: bootstrap_supabase.py  check_backend_runtime.py  check_demo_flow.py  check_live_demo_flow.py  check_market_data_pipeline.py  check_market_universe.py  check_public_deployment.py  check_supabase_connection.py  check_supabase_persistence.py  export_openapi.py  generate_fixtures.py  run_operations_worker.py  validate_fixtures.py
backend/tests/: conftest.py
(+144 files in other folders)
