[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "nexomercado-contracts"
version = "0.1.0"
description = "Contratos Pydantic y OpenAPI de NexoMercado AI"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "langgraph>=0.2,<1",
  "openai>=1.0.0",
  "python-dotenv>=1,<2",
  "pydantic>=2.11,<3",
  "supabase>=2,<3",
]

[project.optional-dependencies]
dev = [
  "openapi-spec-validator>=0.7,<1",
  "pytest>=8.4,<10",
  "pytest-socket>=0.7,<1",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
